--- a/FormLogScraper.resx
+++ b/FormLogScraper.resx
@@ -132,7 +132,7 @@
   <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="btnConfig.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="BtnConfig.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAWJJREFUOE+1
         k89L1FEUxV31d5go0jJwUQvBxGne+Zw3C8ORFv4iicD/QeyPCALdSSItFGnh1p3iThAtyIg2uUu3hVZc
@@ -173,34 +173,18 @@
         kshMHQwZAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnReset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAb9JREFUSEuN
-        lLtKREEMhv+g+AjeQPQNLMVSvDQKi8/igmCjsKCIL7AWdpa2oq1W+iTrglgKgqJkTs6ZTJJZ94eFmS+3
-        yeyZAJ0IlDfNWkDMHQ0Uccd0YTotTErKx4JIobUP4FcD10imhjsnrWTsg1JyVSAIClDBIjtA7cnTL5+6
-        9NYoW2iCodEJQF1y+b0DeAYwJGDDRtbX8SnO5NRlkXxd3yCcA5jTeZJM7kSCDlgD08EigEOAbhV7JWC2
-        OGErX0gpB3RFzAXsAngTzt1OUr2UWK6kiNW28B8A6/aO1aZeIKnx4U40aNc3UmRoLT6tA9OIDqTAU9yB
-        KGJMXYMCFFpOXxphbLioJCP59heKRD5KiZbk8x2lXWHSmwY8SIG9FuQCuv3ipPtS4L70iUS4kPu8y8gk
-        9Tke5TEOTGFRGbAG0Jfc6ZZNGvj35ECfAFatT03HEsR3uqMNOS6t+BrH8tCOvE+dzPDzV6OAx0IPoHkA
-        K8WoSHOJXqiJSXIdB4R3PMAu5YVKIZmsMuyIhx3Sf+aHXaSgDmuTgGsQPyJ8UDOuea3GtcjHxqyu8t/V
-        sS6PA5GmcmoUuxqat7WzBWn+QX8d3lvXA7FhgwAAAABJRU5ErkJggg==
-</value>
-  </data>
   <data name="BtnErase.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAd5JREFUSEuN
-        lTFPVUEQhb+JNpYkhqh5CSExobK2oSBWdjZa0vALKEkoLEwMHVSUNpBAZWNpbW+hxkQjIVhZUEEEgmJm
-        d97bubuzvneSveyde+acmbn7LqCQdO3AP5R8NzN/cGu7WZK9S48/jnuDeD9do0any0CyJWUIm8BP4AOw
-        UhMHd8Wtp2Yoj3eBG5Cb/JffwJOIWCGouuXuShYtS5KZmiwPmG2uoecjbKtgMRC3T+t8bFJyq2HFpim6
-        nSv1Bn5NxqUmj2OdPrbcKALxZp0Bj2qRCpMf1OtAYGhme9+ZwEGtGOGlSzhtTMaiNjofB/ZqsQQ3u82S
-        LGsCS8AvMwu6Gey/AvNedwhhwxL+ILzIoXRZBI4b0VK1rm/Avf+95HUjXgk8a88qD4AfQ/GJQRJvzrnT
-        eG7VXQJPe1VIEuFLZaDi9x0nxHsz2GiqaPEQ5O9MY7H56mXHErQD921pMAd8VK7Ad2CkwcYgGNFt4K2Z
-        XKSvZJPFnMAn4xyNxRUtNYDArWySXlo2KV3eBcniouIyKt0HiOIWU5NDq/IaeCWwCpxYTE/RSNlFw7+z
-        SNngnqvJm+C8fxZY6CVNRUBbBdkH3tmn405NyBhmBjqKoOUp8PxubtyhD/T+TwQIxP4B4xObAZAhLaoA
-        AAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAASVJREFUSEul
+        VAkOwjAMS//I15GQeMwQabracTJAWKqWq3aTbjP7CaN6kFWjyHsIibBGAoguThjN6dj+SyflDxt2mI3D
+        bV9uZ03diYjUJhJSO8YZR5tqemwBXk50uT4JaGsXxdVYuJ6YZGJTTAXqwqIeXxACb4ixLGTBS18FNJI3
+        nH5MUwT2gXR+lasdTNLt5/ysaYDTmVZNQL6PscsHVoUo4x148kMHUa88ObBQdBACsUXyKEC0cWkpcX7J
+        u4M5llUgHaCPnA14RPIWdQJy0BaFwOUdsN8IUDgTMJShqR/9HeB3oHxv0C+BRqQIFcjf5Q+6v95i+YHu
+        QMYnp8TEzcye3wvYY7z3CHdqCUZEcQRm+qqFqoNiVxGSaF1ToddxYJcyCrQDL4f+mBSfa4sBAAAAAElF
+        TkSuQmCC
 </value>
   </data>
-  <data name="btnStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="BtnStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAQVJREFUSEuN
         VAkOwzAII/9/dCcxymVDailr6oANZKocERH98UeAEGu8ofA8qAoZxfcT9RJwoDADf+P7FXtgNeAgXRof
