--- a/Configuration/Generic/UserControlGenericConfig.resx
+++ b/Configuration/Generic/UserControlGenericConfig.resx
@@ -117,4 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="pictureBox1.ToolTip" xml:space="preserve">
+    <value>oont bij de begin- en eindfilters een rode regel met de tijd en de tekst ERROR. Dit gebeurt onafhankelijk van het type content waarop gefilterd wordt.
+
+Deze functionaliteit werkt alleen als er in de configuratie van de loglayout een contentfilter met de naam "Errors" is ingesteld. Deze filter bepaalt welke regels als rode errorregels worden weergegeven.</value>
+  </data>
 </root>
