--- a/Configuration/Generic/UserControlGenericConfig.resx
+++ b/Configuration/Generic/UserControlGenericConfig.resx
@@ -121,7 +121,7 @@
     <value>17, 17</value>
   </metadata>
   <data name="pictureBox1.ToolTip" xml:space="preserve">
-    <value>oont bij de begin- en eindfilters een rode regel met de tijd en de tekst ERROR. Dit gebeurt onafhankelijk van het type content waarop gefilterd wordt.
+    <value>Toont bij de begin- en eindfilters een rode regel met de tijd en de tekst ERROR. Dit gebeurt onafhankelijk van het type content waarop gefilterd wordt.
 
 Deze functionaliteit werkt alleen als er in de configuratie van de loglayout een contentfilter met de naam "Errors" is ingesteld. Deze filter bepaalt welke regels als rode errorregels worden weergegeven.</value>
   </data>
