--- a/Configuration/Generic/UserControlGenericConfig.resx
+++ b/Configuration/Generic/UserControlGenericConfig.resx
@@ -124,11 +124,6 @@
     <value>Wanneer er op één enkele sessie-metadata wordt gefilterd, wordt de content automatisch hiërarchisch weergegeven.
 Zodra er meerdere sessies geselecteerd zijn, schakelt de weergave automatisch terug naar een vlakke structuur.
 
-Geef in de log-layout aan welke metadata bij een sessie hoort.</value>
-  </data>
-  <data name="pictureBox1.ToolTip" xml:space="preserve">
-    <value>Toont bij de begin- en eindfilters een rode regel met de tijd en de tekst ERROR. Dit gebeurt onafhankelijk van het type content waarop gefilterd wordt.
-
-Deze functionaliteit werkt alleen als er in de configuratie van de loglayout een contentfilter met de naam "Errors" is ingesteld. Deze filter bepaalt welke regels als rode errorregels worden weergegeven.</value>
+Geef in de log-layout configuratie aan welke metadata bij een sessie hoort.</value>
   </data>
 </root>
