Fixed typo in pod name shortening explanation

--- a/LogProviders/Kubernetes/UserControlKubernetesConfig.resx
+++ b/LogProviders/Kubernetes/UserControlKubernetesConfig.resx
@@ -121,9 +121,9 @@
     <value>17, 17</value>
   </metadata>
   <data name="pictureBox3.ToolTip" xml:space="preserve">
-    <value>Kort de namen van pods in daar bepaalde delen tekst uit de naam te verwijderen. 
+    <value>Kort de namen van pods in door bepaalde delen tekst uit de naam te verwijderen. 
 Geef de te verwijderen delen van tekst op, geef meerdere delen op door deze met spatie te scheiden.
 
-De naam wordt alleen binnen de Logscraper applicatie aangepast. Kubernetes wordt hierdoor niet aangepast of beïnvloed.</value>
+De afgekorte naam wordt alleen binnen de Logscraper applicatie aangepast. Kubernetes wordt hierdoor niet aangepast of beïnvloed.</value>
   </data>
 </root>
