--- a/LogProviders/Runtime/UserControlRuntimeConfig.nl.resx
+++ b/LogProviders/Runtime/UserControlRuntimeConfig.nl.resx
@@ -117,101 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="pictureBox7.ToolTip" xml:space="preserve">
-    <value>Een log layout bevat de definitie van hoe elke log regel eruit ziet. Dit bevat:
-- de datum-tijd die aan het begin van elke regel verwacht wordt (stack traces zonder datum zijn toegestaan).
-- de metadata die per logregel weggeschreven wordt en waarop gefilterd kan worden.
-- eventuele inhoudelijke gegevens (content) waarop gezocht kan worden. Dit wordt gebruikt voor de begin en eind filters.</value>
-  </data>
-  <data name="pictureBox11.ToolTip" xml:space="preserve">
-    <value>Geef de tekst die het einde van de metadata, en het begin van de daadwerkelijke log regel content identificeerd.
+  <data name="pictureBox3.ToolTip" xml:space="preserve">
+    <value>Deze optie werkt momenteel alleen voor paginas die middels een sessie cookie en een token op de inlogpagina.
 
-Bijvoorbeeld 2025-01-01T01:02:03.123 INFO metadataA=WaardeX, MetadataB=WaardeY - Voorbeeld logregel tekst
-Gebruik in dit voorbeeld: " -"
-
-De applicatie gebruikt deze informatie o.a. om de metadata te verwijderen en een meer leesbaar log te tonen
-
-Indien de Regex optie is aangevinkt wordt naar de metadata tekst gezocht die aan de Regex expressie voldoet, de tekst na de metadata wordt als content beschouwd. Gebruik geen ^ aan het begin van de Regex. De regex zoekt na de timestamp, dus die hoeft niet in de regex.
-
-Gebruik de volgende regex om op meerdere spaties te zoeken vanaf de timestamp, bijvoorbeeld 8:
-(?:\s+\S+){8}</value>
+Geef de URL van inlog webpagina op. 
+Voor de namen van de velden kijk in de HTML van de inlogpagina en identificeer de ids van de gebruikersnaam, wachtwoord en (CSRF) token.</value>
   </data>
   <data name="pictureBox2.ToolTip" xml:space="preserve">
-    <value>Er wordt altijd een datum tijd verwacht aan het begin van de logregel. Zorg dat het format overeenkomt met hoe het in de logregel staat.
+    <value>Gebruik deze optie indien er een lijst met logbestanden benaderbaar is vanaf een HTML pagina. 
 
-Specifier Voorbeeld Betekenis
-yyyy 2025 Volledig jaartal (4 cijfers)
-yy 25 Jaar in 2 cijfers
-MM 04 Maand (met voorloopnul)
-M 4 Maand (zonder voorloopnul)
-dd 14 Dag van de maand (met nul)
-d 14 Dag van de maand (zonder nul)
-dddd maandag Volledige naam van de dag
-ddd ma Afgekorte dagnaam
+Geef bij de URL die van de HTML pagina op die links naar de logs bevat. 
 
-HH 09 Uur (24-uurs, met nul)
-H 9 Uur (24-uurs, zonder nul)
-hh 09 Uur (12-uurs, met nul)
-h 9 Uur (12-uurs, zonder nul)
-mm 07 Minuten (met nul)
-m 7 Minuten (zonder nul)
-ss 04 Seconden (met nul)
-s 4 Seconden (zonder nul)
-tt AM / PM Voormiddag / namiddag
-
-fff 123 Milliseconden
-zz +02 Tijdzone offset in uren
-zzz +02:00 Tijdzone offset met minuten
-
-Voorbeelden
-yyyy-MM-dd HH:mm:ss 2025-04-14 13:45:30 Volledige datum + tijd (24-uurs)
-yyyy-MM-ddTHH:mm:ss 2025-04-14T13:45:30 ISO 8601 notatie (bijv. voor JSON)
-ddd dd MMM yyyy ma 14 apr 2025 Leesbare datum, afgekorte dag/maand
-dddd dd MMMM yyyy maandag 14 april 2025 Volledig uitgeschreven datum
-yyyy-MM-dd HH:mm:ss.fff 2025-04-14 13:45:30.123 Inclusief milliseconden
-yyyy-MM-dd HH:mm:ss zzz 2025-04-14 13:45:30 +02:00 Met tijdzone offset</value>
+De applicatie detecteerd automatisch de logs en geeft hierin een keuze.</value>
   </data>
   <data name="pictureBox1.ToolTip" xml:space="preserve">
-    <value>Metadata zijn gegevens die bij elke logregel aanwezig zijn en waarop gefilterd kan worden. 
-Bijvoorbeeld 2025-01-01T01:02:03.123 INFO metadataA=WaardeX, MetadataB=WaardeY
+    <value>Gebruik deze optie indien er mappen met logbestanden benaderbaar zijn vanaf een HTML pagina. 
 
-Let op! De applicatie kan langzamer worden indien metadata wordt gebruikt die vaak wijzigd (bijvoorbeeld een trace-id). Probeer voor deze gevallen het in te lezen log klein te houden.</value>
-  </data>
-  <data name="pictureBox18.ToolTip" xml:space="preserve">
-    <value>Als deze optie is ingeschakeld en de opgegeven content wordt gevonden, wordt de betreffende logregel als een fout gemarkeerd.
+Geef bij de URL die van de HTML pagina op die mappen bevat. 
 
-Deze fouten worden geteld en teruggekoppeld, en binnen de contentfilters worden fouten apart in rood weergegeven tussen de andere content (dit is configureerbaar).</value>
-  </data>
-  <data name="pictureBox17.ToolTip" xml:space="preserve">
-    <value>Het is mogelijk om een hiërarchische weergave van logregels te tonen die een flow en eventuele subflows beschrijven. Selecteer deze optie als deze contentfilter het begin van een (sub)flow markeert.
-Kies vervolgens in de dropdown de contentfilter die het bijbehorende einde van de (sub)flow aanduidt.
-
-De applicatie herkent hiermee beginnen en eindes van aangegeven flows en hoe deze genest zijn in elkaar. Dit wordt omgezet naar een hiërarchische weergave.
-
-Zodra deze optie is ingeschakeld, kan de geselecteerde contentfilter hiërarchisch weergegeven worden.
-
-Let op: Als de hiërarchische weergave erg groot of (deels) onjuist is, moet het logbestand mogelijk verder worden gefilterd. Beperk de log tot de sessie waarin je geïnteresseerd bent om ruis te voorkomen.</value>
-  </data>
-  <data name="pictureBox9.ToolTip" xml:space="preserve">
-    <value>Geef de tekst die net voor de content waarde staat en (optioneel) de tekst die net na de content waarde staat.
-Zet tussen de voor en na tekst: =&gt;
-Het is mogelijk meerdere voor en na teksten op te geven, zet elk op een eigen regel.
-
-Voorbeeld: indien in de logregel staat API call: X
-Geef dan op: API call: 
-
-Voorbeeld: indien in de logregel staat API call: X is being started
-Geef dan op: API call: =&gt; is being started</value>
-  </data>
-  <data name="pictureBox6.ToolTip" xml:space="preserve">
-    <value>Geef hier filters op voor de inhoudelijke waardes in het log. Deze kunnen gebruikt worden voor snel kunnen vinden van de gewenste logregel. 
-In de applicatie verschijnt dit bij de begin en eind filters
-
-Bijvoorbeeld:
-2025-01-01 01:02:03.123 INFO MetadataX=WaardeY - Voorbeeld logtekst en hier begint de API call: X
-Dan kan de tekst voor de waarde zijn: API call: 
-De tekst na de waarde mag leeg blijven.
-
-Let op! De applicatie kan langzamer worden indien de content in vele logregels voorkomt.</value>
+De mappen verwijzen naar HTML paginas waar links naar log bestanden staan. De applicatie detecteerd automatisch de mappen en logs en geeft hierin een keuze.</value>
   </data>
 </root>
